--- a/deploy/about.html
+++ b/deploy/about.html
@@ -37,7 +37,7 @@
         <nav id="nav-container" data-nav="main-navigation">
             <ul>
                 <li>
-                    <a href="../content/portfolio_controls.kit">Portfolio</a>
+                    <a href="index.html">Portfolio</a>
                     <div class="underline"></div>
                 </li>
                 <li>
@@ -111,6 +111,16 @@
                 <a id="link-2" href="deploy/img/About/LaurenRoberts-Resume.pdf" target="_blank">View Resume</a>
                    
             </div>
+            <footer>
+                <hr>
+                <div>
+                    <h5>© 2022 by Lauren Roberts.</h5>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/lauren-roberts-7a02971a9/"><i class="fa fa-linkedin"></i></i></a></li>
+                        <li><a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+            </footer>
         </section>
     <script src=''></script>
             <script src="js/scripts-min.js"></script>
