--- a/deploy/contact_module.html
+++ b/deploy/contact_module.html
@@ -1,4 +1,4 @@
-<section id="contact-module">
+<!-- <section id="contact-module">
     <div id="contact-module container">
         <div id="x">
             <svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53 53">
@@ -10,4 +10,4 @@
             <button type="button" class="contact" id="download-resume">Download Resume</button>
         </div>
     </div>
-</section>
+</section> -->
